syntax = "proto3";

package cheers.story.v1;

import "cheers/type/story/story.proto";
import "cheers/type/user/user.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option go_package = "github.com/salazarhugo/cheers1/genproto/cheers/story/v1;story";

service StoryService {
  rpc CreateStory (CreateStoryRequest) returns (StoryResponse);
  rpc GetStory (GetStoryRequest) returns (StoryResponse);
  rpc UpdateStory (UpdateStoryRequest) returns (StoryResponse);
  rpc DeleteStory (DeleteStoryRequest) returns (google.protobuf.Empty);

  rpc FeedStory (FeedStoryRequest) returns (FeedStoryResponse);
  rpc LikeStory (LikeStoryRequest) returns (LikeStoryResponse);
  rpc UnlikeStory (UnlikeStoryRequest) returns (UnlikeStoryResponse);
  rpc SaveStory (SaveStoryRequest) returns (SaveStoryResponse);
  rpc UnsaveStory (UnsaveStoryRequest) returns (UnsaveStoryResponse);
}

message CreateStoryRequest {
  cheers.type.Story story = 1;
}

message GetStoryRequest {
  string id = 1;
}

message UpdateStoryRequest {
  cheers.type.Story story = 1;
}

message DeleteStoryRequest {
  string id = 1;
}

message FeedStoryRequest {
  string parent = 1;
  int32 page_size = 2;
  int32 page = 3;
}

message FeedStoryResponse {
  repeated StoryResponse stories = 1;
  string next_page_token = 2;
}

message LikeStoryRequest {
  string id = 1;
}

message LikeStoryResponse {
  bool success = 1;
}

message UnlikeStoryRequest {
  string id = 1;
}

message UnlikeStoryResponse {
  bool success = 1;
}

message SaveStoryRequest {
  string id = 1;
}

message SaveStoryResponse {
  bool success = 1;
}

message UnsaveStoryRequest {
  string id = 1;
}

message UnsaveStoryResponse {
  bool success = 1;
}

message StoryResponse {
  cheers.type.Story story = 1;
  cheers.type.User user = 2;
  int64 like_count = 3;
  int64 viewer_count = 4;
  bool has_liked = 5;
}